--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "eslint": "^5.5.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "eslint-config-lighthouselabs": "lighthouse-labs/eslint-config-lighthouselabs"
   }
 }
